adds infrastructure files to project
Docker, Jenkinsfile, PluginIns for Maven and Sonar

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,9 +2,9 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://${LEARNING_OUTCOME_DB}:27017/${LEARNING_OUTCOME_DB_NAME}
-      password: ${LEARNING_OUTCOME_DB_PW}
-      username: ${LEARNING_OUTCOME_DB_USER}
+      uri: mongodb://${RESOURCE_DB_HOST}:${RESOURCE_DB_PORT}/${RESOURCE_DB_NAME}
+      password: ${RESOURCE_DB_PW}
+      username: ${RESOURCE_DB_USER}
   # kafka servers
   kafka:
     bootstrap-servers: kafka-1:9092,kafka-2:9092,kafka-3:9092
