--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,4 +19,6 @@ security:
 # Eureka
 eureka:
   client:
-    enabled: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    enabled: true
