Move Spring profile configuration to compose files

--- a/src/main/docker/docker-compose-dev.yml
+++ b/src/main/docker/docker-compose-dev.yml
@@ -3,5 +3,8 @@ version: '3.4'
 services:
   springboot-service:
     image: docker.nexus.archi-lab.io/archilab/coalbase-resource-dev
+    environment:
+      - TZ=Europe/Berlin
+      - SPRING_PROFILES_ACTIVE=dev
     ports:
       - "8082:8080"
