--- a/src/main/docker/docker-compose-prod.yml
+++ b/src/main/docker/docker-compose-prod.yml
@@ -25,6 +25,9 @@ services:
         delay: 5s
         max_attempts: 3
         window: 120s
+    environment:
+      - TZ=Europe/Berlin
+      - SPRING_PROFILES_ACTIVE=prod
     networks:
       - coalbase_backend
 #    logging:
