--- a/src/main/docker/docker-compose-prod.yml
+++ b/src/main/docker/docker-compose-prod.yml
@@ -1,17 +1,19 @@
 version: '3.4'
 
 services:
+
   mongo:
-    #    logging:
-    #      driver: gelf
-    #      options:
-    #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
     deploy:
       restart_policy:
         condition: any
         delay: 5s
         max_attempts: 3
         window: 120s
+
   springboot-service:
     image: docker.nexus.archi-lab.io/archilab/coalbase-resource:${BUILD_ID}
     deploy:
@@ -30,10 +32,11 @@ services:
       - SPRING_PROFILES_ACTIVE=prod
     networks:
       - coalbase_backend
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
+        
 networks:
   coalbase_backend:
     external: true
